# ASRMixingRouter

./: Cargo.toml  README.md  config.example.toml
crates/asr-audio/: Cargo.toml
crates/asr-audio/src/: capture.rs  device.rs  lib.rs  mixer.rs  output.rs
crates/asr-audio/tests/: integration.rs
crates/asr-core/: Cargo.toml
crates/asr-core/src/: config.rs  types.rs
crates/asr-destination/: Cargo.toml
crates/asr-engine/: Cargo.toml
crates/asr-engine/src/: engine_trait.rs  host.rs  null_engine.rs  registry.rs  whisper_engine.rs
crates/asr-engine/tests/: integration.rs
crates/asr-router/: Cargo.toml
crates/asr-tui/: Cargo.toml
crates/voxmux-audio/: Cargo.toml
crates/voxmux-audio/src/: capture.rs  device.rs  lib.rs  mixer.rs  output.rs
crates/voxmux-audio/tests/: integration.rs
crates/voxmux-core/: Cargo.toml
crates/voxmux-core/src/: config.rs  config_diff.rs  error.rs  lib.rs  tui_types.rs
crates/voxmux-destination/: Cargo.toml
crates/voxmux-destination/src/: dest_trait.rs  discord_dest.rs  file_dest.rs  host.rs  lib.rs  registry.rs
crates/voxmux-destination/tests/: integration.rs
crates/voxmux-engine/: Cargo.toml
crates/voxmux-engine/src/: engine_trait.rs  host.rs  lib.rs  null_engine.rs  registry.rs  whisper_engine.rs
crates/voxmux-engine/tests/: integration.rs
crates/voxmux-router/: Cargo.toml
crates/voxmux-tui/: Cargo.toml
crates/voxmux-tui/src/: app.rs  lib.rs  log_layer.rs  ui.rs
crates/voxmux-tui/tests/: integration.rs
src/: main.rs
