[workspace]
members = [
    "crates/asr-core",
    "crates/asr-audio",
    "crates/asr-engine",
    "crates/asr-destination",
    "crates/asr-tui",
    "crates/asr-router",
]
resolver = "2"

[workspace.dependencies]
cpal = "0.15"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1"
async-trait = "0.1"

# Internal crates
asr-core = { path = "crates/asr-core" }
asr-audio = { path = "crates/asr-audio" }
asr-engine = { path = "crates/asr-engine" }
asr-destination = { path = "crates/asr-destination" }
asr-tui = { path = "crates/asr-tui" }
asr-router = { path = "crates/asr-router" }

[package]
name = "asr-mixing-router"
version = "0.1.0"
edition = "2021"

[dependencies]
asr-core = { workspace = true }
asr-audio = { workspace = true }
asr-engine = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
