[workspace]
members = [
    "crates/voxmux-core",
    "crates/voxmux-audio",
    "crates/voxmux-engine",
    "crates/voxmux-destination",
    "crates/voxmux-tui",
    "crates/voxmux-router",
]
resolver = "2"

[workspace.dependencies]
cpal = "0.15"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1"
async-trait = "0.1"

# Internal crates
voxmux-core = { path = "crates/voxmux-core" }
voxmux-audio = { path = "crates/voxmux-audio" }
voxmux-engine = { path = "crates/voxmux-engine" }
voxmux-destination = { path = "crates/voxmux-destination" }
voxmux-tui = { path = "crates/voxmux-tui" }
voxmux-router = { path = "crates/voxmux-router" }

[package]
name = "voxmux"
version = "0.1.0"
edition = "2021"

[dependencies]
voxmux-core = { workspace = true }
voxmux-audio = { workspace = true }
voxmux-engine = { workspace = true }
voxmux-destination = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
