[package]
name = "asr-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
asr-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
whisper = []

# When real whisper inference is needed, uncomment:
# whisper = ["dep:whisper-rs"]
# [dependencies.whisper-rs]
# version = "0.12"
# optional = true
