[package]
name = "voxmux-destination"
version = "0.1.0"
edition = "2021"

[dependencies]
voxmux-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
discord = []
